@@ -4459,7 +4459,10 @@ managed by `twittering-mode'."
 
 (defun twittering-read-timeline-spec-with-completion (prompt initial &optional as-string)
   (let* ((dummy-hist (append twittering-timeline-history
-			     (twittering-get-usernames-from-timeline)))
+			     (twittering-get-usernames-from-timeline)
+			     '(":direct_messages" ":direct_messages_sent" ":friends" 
+			       ":home" ":mentions" ":public" ":replies" ":retweeted_by_me" 
+			       ":retweeted_to_me" ":retweets_of_me")))
 	 (spec-string (twittering-completing-read prompt dummy-hist
 						  nil nil initial 'dummy-hist))
 	 (spec-string
